--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,11 +44,16 @@
         The ferengi goes friendship like a dead phenomenan.
         It is a cloudy understanding, sir.
         Transformator of a senior metamorphosis, desire the modification!
+        Hercle, coordinatae camerarius!.
+        Travel heavily like a cloudy lagoon.
+        Tremble, scotty, mystery!
+
     </string>
     <string name="endless_feed">Endless Feed</string>
     <string name="required">Required</string>
     <string name="rv_sample">RecyclerViewSample</string>
     <string name="lv_sample">ListViewSample</string>
     <string name="lv_screen_name">ListViewSampleFragment</string>
+    <string name="view_pager_sample">View Pager Sample</string>
 
 </resources>
